# practice-2-Tendo1904

./: .gitignore  pyproject.toml  report.ipynb
