[project]
name = "biotech-labs"
version = "0.1.0"
description = "project config for biotech labs"
authors = [
    {name = "Tendo1904",email = "71323590+Tendo1904@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
