[project]
name = "biotech-labs"
version = "0.1.0"
description = "project config for biotech labs"
authors = [
    {name = "Tendo1904",email = "71323590+Tendo1904@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pymatgen (>=2025.6.14,<2026.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "mp-api (>=0.45.8,<0.46.0)",
    "biopython (>=1.85,<2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"